revert accidental id change

--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -87,7 +87,7 @@
 	</div>
 
 	<div id="menu-right" class="menu-right">
-		<div id="menu-right-showshow" class="content-icon">
+		<div id="menu-right-showhide" class="content-icon">
 			<span class="icon icon-reorder"></span>
 		</div>
 		<div class="content">
