--- a/public/create/test-allan.html
+++ b/public/create/test-allan.html
@@ -93,7 +93,8 @@ elseif (mail($email,$subject,$message)) {
 		CKEDITOR.replace( 'editor1', {
             //extraAllowedContent: "h1 a span(speech)",
 			allowedContent: true,
-			extraPlugins: 'image2,identify-empty-paragraphs',
+			//extraPlugins: 'image2,identify-empty-paragraphs',
+			extraPlugins: 'image2',
 			skin: 'scripler',
 			height: 600,
 			width: 850,
