--- a/public/create/index.html
+++ b/public/create/index.html
@@ -9,6 +9,7 @@
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular-route.js"></script>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular-sanitize.js"></script>
 	<script type="text/javascript" src="scripts/angular-local-storage.min.js"></script>
+	<script type="text/javascript" src="scripts/angular-file-upload.min.js"></script>
 	<script type="text/javascript" src="scripts/html5-sortable.js"></script>
 	<script type="text/javascript" src="scripts/app_controller.js"></script>
 	<script type="text/javascript" src="scripts/create_controller.js"></script>
