added import drop area

--- a/public/create/index.html
+++ b/public/create/index.html
@@ -5,6 +5,7 @@
 
 	<link rel="stylesheet" type="text/css" href="pages/css/shared/default.css" />
 
+	<script type="text/javascript" src="scripts/angular-file-upload-html5-shim.min.js"></script>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular.js"></script>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular-route.js"></script>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular-sanitize.js"></script>
