--- a/public/create/index.html
+++ b/public/create/index.html
@@ -12,6 +12,7 @@
 	<script type="text/javascript" src="scripts/angular-local-storage.min.js"></script>
 	<script type="text/javascript" src="scripts/angular-file-upload.min.js"></script>
 	<script type="text/javascript" src="scripts/html5-sortable.js"></script>
+	<script type="text/javascript" src="scripts/ngProgress.min.js"></script>
 	<script type="text/javascript" src="scripts/app_controller.js"></script>
 	<script type="text/javascript" src="scripts/create_controller.js"></script>
 	<script type="text/javascript" src="scripts/project_controller.js"></script>
