--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -27,7 +27,7 @@
 						<p>+</p>
 					</div>
 					<div html-sortable="sortable_option" ng-model="projectDocuments">
-						<div class="projectDocument" ng-repeat="projectDocument in projectDocuments track by projectDocument._id" ng-hide="projectDocument.archived && !user.showArchivedDocuments">
+						<div class="projectDocument" ng-repeat="projectDocument in projectDocuments track by projectDocument._id" ng-selected="documentSelected === projectDocument" ng-hide="projectDocument.archived && !user.showArchivedDocuments">
 							<a class="projectDocument-options-show" ng-click="showProjectDocumentOptions = true">
 								<div class="arrow"></div>
 							</a>
@@ -92,9 +92,7 @@
 
 	<div class="editor">
 		<div id="toolbar-area" class="toolbar-area"></div>
-		<textarea ck-editor="" ng-model="entrybody" class="form-control" id="bodyeditor" value="{{entrybody}}">
-			{{entrybody}}
-		</textarea>
+		<textarea ck-editor="" ng-model="ckEditorContent" class="form-control" id="bodyeditor"></textarea>
 	</div>
 
 	<div id="menu-right" class="menu-right">
