--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -83,7 +83,7 @@
 						 ng-show="dropSupported" ng-file-drop-available="dropSupported=true">drop files here</div>
 				</div>
 				<div ng-show="showBottomOptions">
-					<input type="checkbox" ng-model="user.showArchivedDocuments" ng-change="updateUser();">Show Archived Documents
+					<input type="checkbox" ng-model="user.showArchivedDocuments" ng-change="updateUser();">Show Archived Documents<br>
 					<a ng-click="">Compile</a>
 				</div>
 			</div>
