--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -92,7 +92,7 @@
 
 	<div class="editor">
 		<div id="toolbar-area" class="toolbar-area"></div>
-		<textarea ck-editor="" ng-model="ckEditorContent" class="form-control" id="bodyeditor"></textarea>
+		<textarea ck-editor="" ng-model="documentSelected.content" class="form-control" id="bodyeditor"></textarea>
 	</div>
 
 	<div id="menu-right" class="menu-right">
