fixed upload, added open document

--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -33,7 +33,7 @@
 							</a>
 
 							<p ng-hide="editingProjectDocumentTitle">
-								<a ng-click="projectDocumentChoosen(projectDocument)">{{projectDocument.name}}</a>
+								<a ng-click="projectDocumentChosen(projectDocument)">{{projectDocument.name}}</a>
 							</p>
 
 							<form ng-show="editingProjectDocumentTitle">
