--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -67,11 +67,11 @@
 						</li>
 					</ul>-->
 					<ul>
-						<li ng-repeat="styleset in stylesets" class="typo" ng-click="visible=!visible" ng-class="{ 'open' : visible == true}">
-							<p>{{styleset.name}}</p>
+						<li ng-repeat="styleset in stylesets" class="typo" ng-class="{ 'open' : visible == true}">
+							<p ng-click="visible=!visible">{{styleset.name}}</p>
 
 							<ul ng-show="visible" class="typo-children">
-								<li ng-repeat="style in styleset.styles">{{style.name}}</li>
+								<li ng-repeat="style in styleset.styles" ng-click="x=!x">{{style.name}}</li>
 							</ul>
 						</li>
 					</ul>
