add new style api call

--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -74,6 +74,7 @@
 
 							<ul ng-show="visible" class="typo-children">
 								<li ng-repeat="style in styleset.styles" ng-click="x=!x">{{style.name}}</li>
+								<li class="typo new" ng-click="addNewStyle( styleset )"><p>+</p></li>
 							</ul>
 						</li>
 					</ul>
