--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -62,7 +62,7 @@
 						<p>+</p>
 					</div>
 					<ul>
-						<li ng-repeat="styleset in stylesets" class="typo" ng-class="{ 'open' : visible == true }">
+						<li ng-repeat="styleset in stylesets" class="typo" ng-class="{ 'open' : visible == true }" ng-hide="styleset.archived">
 							<a class="styleset-options-show" ng-click="showStylesetOptions = true">
 								<div class="arrow"></div>
 							</a>
@@ -75,7 +75,7 @@
 							</div>
 
 							<ul ng-hide="visible" class="typo-children">
-								<li ng-repeat="style in styleset.styles" ng-click="x=!x">
+								<li ng-repeat="style in styleset.styles" ng-click="x=!x" ng-hide="style.archived">
 									<a class="style-options-show" ng-click="showStyleOptions = true">
 										<div class="arrow"></div>
 									</a>
