--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -67,11 +67,18 @@
 								<div class="arrow"></div>
 							</a>
 
-							<p ng-click="visible=!visible">{{styleset.name}}</p>
+							<p ng-click="visible=!visible" ng-hide="editingStylesetName">{{styleset.name}}</p>
+
+							<form ng-show="editingStylesetName">
+								<p>
+									<textarea id="renameStyleset" rows="1" ng-model="styleset.name" focus-on="!!editingStylesetName" on-enter="editingStylesetName = false; renameStyleset(styleset);"></textarea>
+								</p>
+							</form>
 
 							<div class="styleset-options" ng-show="showStylesetOptions">
 								<div class="styleset-options-hide" ng-click="showStylesetOptions = false;" title="Close Options">x</div>
-								<div class="styleset-options-menupoint first" ng-click="archiveStyleset(styleset); showStylesetOptions = false;">archive</div>
+								<div class="styleset-options-menupoint first" ng-click="editingStylesetName = true; showStylesetOptions = false;">rename</div>
+								<div class="styleset-options-menupoint" ng-click="archiveStyleset(styleset); showStylesetOptions = false;">archive</div>
 							</div>
 
 							<ul ng-hide="visible" class="typo-children">
@@ -80,11 +87,16 @@
 										<div class="arrow"></div>
 									</a>
 
-									<span>{{style.name}}</span>
+									<span ng-hide="editingStyleName">{{style.name}}</span>
+
+									<form ng-show="editingStyleName">
+										<textarea id="renameStyle" rows="1" ng-model="style.name" focus-on="!!editingStyleName" on-enter="editingStyleName = false; renameStyle(style);"></textarea>
+									</form>
 
 									<div class="style-options" ng-show="showStyleOptions">
 										<div class="style-options-hide" ng-click="showStyleOptions = false;" title="Close Options">x</div>
-										<div class="style-options-menupoint first" ng-click="archiveStyle(styleset, style); showStyleOptions = false;">archive</div>
+										<div class="style-options-menupoint first" ng-click="editingStyleName = true; showStyleOptions = false;">rename</div>
+										<div class="style-options-menupoint first" ng-click="archiveStyle(style); showStyleOptions = false;">archive</div>
 									</div>
 								</li>
 								<li class="new style" ng-click="addNewStyle( styleset )"><p>+</p></li>
