refactoring styleset utils shared and createController

--- a/public/create/pages/project-space.html
+++ b/public/create/pages/project-space.html
@@ -63,7 +63,7 @@
 			</div>
 		</section>
 
-		<section class="section-publications" ng-controller="PublicationsCtrl">
+		<section class="section-publications">
 			<div class="publication new" ng-click="addPublication(publication)">
 				<p>+</p>
 			</div>
