--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -120,7 +120,7 @@
 		</div>
 
 		<div class="stylesets-options-bottom-buttons" ng-show="showTypo">
-			<a ng-click="showStyleEditor()">style editor</a>
+			<a ng-click="showStyleEditor()" ng-class="{ 'open' : styleEditorVisible }">style editor</a>
 		</div>
 
 		<div id="menu-left-content-options" class="menu-left-options" ng-show="showDocuments" ng-class="{ 'open' : showNewOptions || showImportOptions || showBottomOptions }">
