--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -150,7 +150,24 @@
 							this is the options for insert image
 						</li>
 						<li class="insertOptionProperties" ng-class="{ 'expanded' : activeInsertOption === 'showInsertPagebreakOptions' }">
-							this is the options for insert pagebreak
+							<div>
+								<span class="left-menu-button">
+									<a ng-click="insertPageBreak()">
+										<img src="/create/ckeditor/skins/scripler/icons/pagebreak.png" title="Insert the pagebreak" />
+									</a>
+								</span>
+								<span class="left-menu-button">
+									<a ng-click="insertPageBreakAvoid()">
+										<img src="/create/ckeditor/skins/scripler/icons/pagebreak.png" title="Avoid pagebreak" />
+									</a>
+								</span>
+							</div>
+							<div class="left-menu-divider"></div>
+							<div class="left-menu-icons">
+								<span class="left-menu-button left-menu-close-item" ng-click="insertOptionChoosen('showInsertPagebreakOptions');">
+									X
+								</span>
+							</div>
 						</li>
 						<li class="insertOption" ng-class="{ 'expanded' : activeInsertOption === 'showInsertAnchorOptions' }">
 							<a ng-click="insertOptionChoosen('showInsertAnchorOptions');">
